force-app/main/default/objects/CRMWebClient__OmniChannel_Status_Mapping__c/CRMWebClient__OmniChannel_Status_Mapping__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Omni-Channel Status Mapping</label>
    <nameField>
        <label>OmniChannel Status Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Omni-Channel Status Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>