force-app/main/default/objects/CRMWebClient__OmniChannel_Status_Mapping__c/fields/CRMWebClient__cic4sf_entering_status__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__cic4sf_entering_status__c</fullName>
    <description>The status to listen for on PureConnect for Salesforce, which will trigger a status change on Omni-Channel.</description>
    <inlineHelpText>The status to listen for on PureConnect for Salesforce, which will trigger a status change on Omni-Channel.</inlineHelpText>
    <label>PureConnect Entering Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>