force-app/main/default/objects/CRMWebClient__OmniChannel_Status_Mapping__c/fields/CRMWebClient__cic4sf_exiting_go_to_on_omni__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__cic4sf_exiting_go_to_on_omni__c</fullName>
    <description>The status to go to on Omni-Channel when PureConnect for Salesforce exitings the exiting status.</description>
    <inlineHelpText>The status to go to on Omni-Channel when PureConnect for Salesforce exitings the exiting status.</inlineHelpText>
    <label>PureConnect Exiting Go To On Omni</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>