force-app/main/default/objects/CRMWebClient__OmniChannel_Status_Mapping__c/fields/CRMWebClient__cic4sf_exiting_status__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__cic4sf_exiting_status__c</fullName>
    <description>The status to listen to on PureConnect for Salesforce (upon exiting) that will trigger a status change on Omni-Channel.</description>
    <inlineHelpText>The status to listen to on PureConnect for Salesforce (upon exiting) that will trigger a status change on Omni-Channel.</inlineHelpText>
    <label>PureConnect Exiting Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>