force-app/main/default/objects/CRMWebClient__OmniChannel_Status_Mapping__c/fields/CRMWebClient__map_direction__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__map_direction__c</fullName>
    <description>The direction mapping will occur.</description>
    <inlineHelpText>The direction mapping will occur.</inlineHelpText>
    <label>Map Direction</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>