force-app/main/default/objects/CRMWebClient__OmniChannel_Status_Mapping__c/fields/CRMWebClient__omni_channel_entering_go_to_on_cic4sf__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__omni_channel_entering_go_to_on_cic4sf__c</fullName>
    <description>The status to go to on PureConnect for Salesforce when the entering status is entered on Omni-Channel.</description>
    <inlineHelpText>The status to go to on PureConnect for Salesforce when the entering status is entered on Omni-Channel.</inlineHelpText>
    <label>Omni Ch. Entering Go To On PureConnect</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>