force-app/main/default/objects/CRMWebClient__OmniChannel_Status_Mapping__c/fields/CRMWebClient__omni_channel_exiting_status__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__omni_channel_exiting_status__c</fullName>
    <description>The status to listen for on Omni-Channel (upon exiting) that triggers a status change on PureConnect for Salesforce.</description>
    <inlineHelpText>The status to listen for on Omni-Channel (upon exiting) that triggers a status change on PureConnect for Salesforce.</inlineHelpText>
    <label>Omni Channel Exiting Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>