force-app/main/default/objects/CRMWebClient__OmniChannel_Status_Mapping__c/listViews/CRMWebClient__All.listView-meta.xml
<ListView>
    <fullName>CRMWebClient__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>